# nerd-dock

./: .gitignore  Makefile  Makefile.prj  README.md  pyproject.toml  task.md
agents/: AGENTS.md  CHAT.md  DOCUMENTATION_INDEX.md
agents/bob.docs/: SKILL.md
agents/cypher.docs/: SKILL.md  context.md  current_task.md  next_steps.md
agents/morpheus.docs/: SKILL.md  context.md  current_task.md  next_steps.md
agents/mouse.docs/: SKILL.md  context.md  current_task.md  next_steps.md
agents/neo.docs/: SKILL.md  context.md  current_task.md  next_steps.md
agents/oracle.docs/: SKILL.md  context.md  current_task.md  next_steps.md
agents/skills/bloop/: SKILL.md
agents/skills/bob-protocol/: SKILL.md
agents/skills/chat/: SKILL.md
agents/skills/make/: SKILL.md
agents/smith.docs/: SKILL.md  context.md  current_task.md  next_steps.md
agents/tools/: chat.py  setup_agent_links.py  teardown_agent_links.py
agents/trin.docs/: SKILL.md
docs/: ARCH.md  PRD.md  USER_GUIDE.md  USER_STORIES.md
nerd_dock/: __init__.py  controller.py  main.py  monitor.py  ui_indicator.py
tests/: mocks.py  test_controller.py  test_monitor.py  test_ui.py
